4.3/modules/ROOT/pages/mmp-concept.adoc
= Mule Maven Plugin
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]

include::mule-runtime::partial$mmp-concept.adoc[tag=deprecatedVersionsWarning]

The Mule Maven plugin enables you to integrate the packaging and deployment of your Mule applications with your Maven lifecycle. +
See xref:package-a-mule-application.adoc[Package a Mule Application] for packaging instructions.

The Mule Maven plugin is compatible with Mule runtime engine (Enterprise Edition) and with Mule Kernel (Community Edition).

Using the Mule Maven plugin, you can automate your Mule application deployment to CloudHub, to Anypoint Runtime Fabric, or on-premises, using any of the following deployment strategies:

* CloudHub deployment +
Deploys your Mule application to CloudHub. +
See xref:deploy-to-cloudhub.adoc[Deploy Applications to CloudHub] for instructions.
* Runtime Fabric deployment +
Deploys your Mule application to Anypoint Runtime Fabric. +
See xref:deploy-to-rtf.adoc[Deploy Applications to Anypoint Runtime Fabric] for instructions.
* Runtime Manager REST API deployment +
Deploys your Mule application to your server, or server clusters using the Runtime Manager REST API. +
See xref:deploy-on-premises.adoc#mmp-deploy-arm[Deploy a Mule Application Using the Runtime Manager REST API] for instructions.
* Runtime Manager agent deployment +
Deploy your Mule application using the Runtime Manager agent. +
This deployment strategy works only if all your Mule instances reside in one address space. +
See xref:deploy-on-premises.adoc#mmp-deploy-agent[Deploy a Mule Application Using the Runtime Manager Agent] for instructions.
* Standalone runtime deployment +
Deploy your Mule application to a Mule instance running on your machine. +
See xref:deploy-on-premises.adoc#mmp-deploy-standalone[Deploy a Mule Application to a Standalone Mule Runtime Engine] for instructions.

== Compatibility

* Mule 4.x
* Anypoint Studio 7.x

== Mule Maven Plugin Goals

The Mule Maven plugin has three goals:

* `package` +
Generates the jar file for your project.
* `deploy` +
Automatically uploads and starts your application in any of the application deployment targets (CloudHub, Runtime Fabric, or On-Premises).
* `mule:deploy` +
Deploys an artifact from the specified location.
* `mule:undeploy` +
Automatically removes your application from any of the application deployment targets (CloudHub, Runtime Fabric, or On-Premises).

Each goal accepts parameters that are unique to the desired plugin behavior.
To provide a parameter from the command line, prepend `-D` to the parameter name.

[[package-goal]]
=== Package Goal

The `package` goal generates the application JAR file. This goal binds by default to the Maven lifecycle phase: `package`.

Optional Parameters
[%header%autowidth.spread,cols="a,a,a"]
|===
|Name | Type | Description
|`onlyMuleSources` | boolean | Generates the application JAR file containing only the source code. This property is just for sharing purposes.
|`attachMuleSources` | boolean | Attaches the source code inside the generated JAR file.
|`lightweightPackage` | boolean | Doesn't generate the repository with all the application dependencies inside the JAR file. This property is just for sharing purposes.
|===

For example, to execute the `package` goal and set the `attachMuleSources` parameter, you run the following command:
[source,console,linenums]
----
mvn package -DattachMuleSources
----

=== Deploy Goal

This goal uploads and deploys the application JAR file to any of the application deployment targets. The deploy goal binds by default to the Maven lifecycle phase: `deploy`.

Optional Parameters
[%header%autowidth.spread,cols="a,a,a"]
|===
|Name | Type | Description
|`artifact` | String | Path to the application JAR file to be deployed. By default is set to the application `target` folder.
|`muleDeploy` | boolean | Instructs the plugin to deploy using the deployment strategy defined in the plugin configuration. If the `muleDeploy` parameter is not set, the plugin uploads the artifacts to the repository defined in the `distributionManagement` section of the application's `pom.xml` file.
|===

For example, to execute the `deploy` goal and set the `muleDeploy` parameter, you run the following command:
[source,console,linenums]
----
mvn deploy -DmuleDeploy
----

=== mule:deploy Goal

This goal enables you to deploy an artifact without building it. To specify the artifact's location, use the `mule.artifact` parameter.

For example:
[source,console,linenums]
----
mvn mule:deploy -Dmule.artifact=myProject/myArtifact.jar
----

=== mule:undeploy Goal

This goal removes an application from any of the application deployment targets. It uses the information from the plugin configuration to remove the application from the defined deployment target.

To execute the `undeploy` goal, run the following command:
[source,console,linenums]
----
mvn mule:undeploy
----

The undeploy goal also deletes the app in Mule Maven plugin 3.3.0 and later versions.

[[add-mmp]]
== Add the Mule Maven Plugin to a Mule Project

Before you can perform any operations, you must add the Mule Maven plugin to your project.

include::mule-runtime::partial$mmp-concept.adoc[tag=addMuleMavenPluginToAProject]

== Skip Plugin Execution

You can skip the plugin execution by setting the `skip` parameter to true inside your deployment configuration:

[source,xml,linenums]
----
<plugin>
include::example$mmp-concept-config.xml[]
  <configuration>
    <standaloneDeployment>
      <muleHome>${mule.home.test}</muleHome>
      <skip>true</skip>
    </standaloneDeployment>
  </configuration>
</plugin>
----

== Skip Deployment Verification

You can skip the status verification of your deployed app by setting the `skipDeploymentVerification` parameter to true inside of any of the platform deployments (Cloudhub, Runtime Manager, and Runtime Fabric):

[source,xml,linenums]
----
<plugin>
include::example$mmp-concept-config.xml[]
  <configuration>
    <runtimeFabricDeployment>
      ...
      <skipDeploymentVerification>true</skipDeploymentVerification>
      ...
    </runtimeFabricDeployment>
  </configuration>
</plugin>
----

If the `skipDeploymentVerification` parameter is not present, the default value is false. +
This feature is available in plugin version 3.2.5 and later.

[[configure-shared-libraries]]
== Configure Shared Libraries

Configure shared libraries when you need to make an application's dependency visible to your application's connectors. To configure a dependency as a shared library, add the following elements in your Mule Maven plugin configuration inside your project's `pom.xml` file:

[source,xml,linenums]
----
<sharedLibraries>
  <sharedLibrary>
    <groupId>${dependencyGroupID}</groupId>
    <artifactId>${dependencyArtifactID}</artifactId>
  </sharedLibrary>
</sharedLibraries>
----

The following example configures Anypoint Connector for Database (Database Connector) in a project, and also configures the MySQL driver as a shared library:

[source,xml,linenums]
----
<build>
  <plugins>
    <!-- Mule Maven Plugin configuration -->
    <plugin>
    	<groupId>org.mule.tools.maven</groupId>
    	<artifactId>mule-maven-plugin</artifactId>
    	<version>${mule.maven.plugin.version}</version>
    	<extensions>true</extensions>
    	<configuration>
    	<sharedLibraries>
        <!-- MySQL driver dependency configured as a shared library -->
        <sharedLibrary>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
        </sharedLibrary>
      </sharedLibraries>
      </configuration>
    </plugin>
  </plugins>
</build>

</dependencies>
  <!--Database Connector dependency -->
  <dependency>
    <groupId>org.mule.connectors</groupId>
    <artifactId>mule-db-connector</artifactId>
    <version>1.5.0</version>
    <classifier>mule-plugin</classifier>
  </dependency>
  <!-- MySQL driver dependency -->
  <dependency>
    <groupId>mysql</groupId>
    <artifactId>mysql-connector-java</artifactId>
    <version>5.1.33</version>
  </dependency>
</dependencies>
----

[[configure-plugin-dependencies]]
== Configure Additional Plugin Dependencies

You can configure additional plugin dependencies for the connectors in your application. +
To configure additional plugin dependencies, add the following elements in your Mule Maven plugin configuration inside your project's `pom.xml` file:

[source,xml,linenums]
----
<additionalPluginDependencies>
    <plugin>
        <groupId>${connectorGroupID}</groupId>
        <artifactId>${connectorArtifactID}</artifactId>
        <additionalDependencies>
            <dependency>
                <groupId>${dependencyGroupID}</groupId>
                <artifactId>${dependencyArtifactID}</artifactId>
                <version>${dependencyVersion}</version>
            </dependency>
        </additionalDependencies>
    </plugin>
</additionalPluginDependencies>
----

The following example configures the Derby driver as a dependency of Database Connector:

[source,xml,linenums]
----
<plugin>
    <!-- Mule Maven Plugin configuration -->
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>${mule.maven.plugin.version}</version>
    <configuration>
        <!-- Plugin dependencies configuration-->
        <additionalPluginDependencies>
            <!-- The connector for which the dependency is defined -->
            <plugin>
                <groupId>org.mule.connectors</groupId>
                <artifactId>mule-db-connector</artifactId>
                <!-- Dependencies definition for the connector -->
                <additionalDependencies>
                    <dependency>
                        <groupId>org.apache.derby</groupId>
                        <artifactId>derby</artifactId>
                        <version>10.11.1.1</version>
                    </dependency>
                </additionalDependencies>
            </plugin>
        </additionalPluginDependencies>
    </configuration>
</plugin>
----

== Mule Maven Plugin Reference

The following links contain the parameter reference of each deployment strategy:

* xref:deploy-to-cloudhub.adoc#cloudhub-deploy-reference[CloudHub deployment parameters reference]
* xref:deploy-to-rtf.adoc#rtf-deploy-reference[Runtime Fabric deployment parameters reference]
* xref:deploy-on-premises.adoc#standalone-deploy-reference[Standalone deployment parameters reference]
* xref:deploy-on-premises.adoc#arm-deploy-reference[Runtime Manager REST API deployment parameters reference]
* xref:deploy-on-premises.adoc#arm-agent-deploy-reference[Runtime Manager agent deployment parameters reference]

== See Also

* xref:about-classloading-isolation.adoc[Classloading Isolation]
* xref:how-to-export-resources.adoc[Export Resources]
* xref:exchange::to-publish-assets-maven.adoc[Publish and Deploy Exchange Assets Using Maven]
* xref:runtime-fabric::deploy-resource-allocation.adoc[Resource Allocation on Anypoint Runtime Fabric]
* xref:runtime-manager::runtime-manager-api.adoc[Runtime Manager REST API]
* xref:runtime-manager::runtime-manager-agent.adoc[Runtime Manager Agent]
